# agent-sop

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  build_agent_sops_distributions.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: publish-skills.yml  pypi-publish-on-release.yml
agent-sops/: code-assist.sop.md  code-task-generator.sop.md  codebase-summary.sop.md  eval.sop.md  pdd.sop.md  sop-generator.sop.md
mcp/: README.md  main.py  pyproject.toml
mcp/sops/: code-assist.script.md  codebase-summary.sop.md  pdd-code-task-generator.script.md  pdd.script.md
playground/: .gitignore  DEVELOPMENT.md  README.md  TESTING.md  babel.config.js  jest.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.test.json  webpack.config.js
playground/public/: index.html
playground/src/: message_router.js  python_bridge.js  server.js  setupTests.js  websocket.js
playground/src/backend/: ConnectionManager.js
playground/src/frontend/: App.tsx  index.tsx  styles.css  types.ts
playground/src/frontend/__tests__/: App.integration.test.tsx  App.test.tsx  ConnectionManager.test.ts  WebSocketIntegration.test.tsx  darkmode.test.tsx  responsive.test.tsx  styles.test.ts  tailwind.test.ts  types.test.ts  useWebSocket.test.ts  useWebSocketEnhanced.test.ts
playground/src/frontend/components/: ChatInterface.tsx  ConnectionStatus.tsx  ErrorNotification.tsx  MCPConfigModal.tsx  ScriptPreview.tsx  SplitLayout.tsx  TestingPanel.tsx  index.ts
playground/src/frontend/components/__tests__/: ChatInterface.integration.test.tsx  ChatInterface.simple.test.ts  ChatInterface.test.tsx  MCPConfigModal.test.tsx  ScriptPreview.test.tsx  SplitLayout.test.tsx  TestingPanel.integration.test.tsx  TestingPanel.test.tsx
playground/src/frontend/hooks/: index.ts  useWebSocket.ts  useWebSocketEnhanced.ts
playground/src/frontend/services/: ConnectionManager.ts  MockDataService.ts  MockExecutionEngine.ts  mockData.ts
playground/src/frontend/services/__tests__/: MockDataService.integration.test.tsx  MockDataService.test.ts  MockExecutionEngine.test.ts
playground/src/python/: .gitignore  __init__.py  main.py  requirements.txt  start_service.py
playground/src/python/config/: __init__.py  settings.py
playground/src/python/services/: __init__.py  agent_service.py  mcp_manager.py  script_format_integration.py
playground/src/python/tests/: __init__.py  test_config.py  test_integration.py  test_main.py  test_mcp_manager.py  test_script_format_integration.py  test_services.py
playground/src/services/: MockMCPService.js
playground/src/shared/: MESSAGE_PROTOCOL.md
playground/src/shared/types/: index.ts  messages.js  messages.ts  validation.js  validation.ts
playground/src/shared/utils/: index.js  messageFactory.js  messageFactory.ts  serialization.js  serialization.ts  typeGuards.js  typeGuards.ts  validation.js
playground/test/: api_integration.test.js  frontend.test.js  jest.node.setup.js  message-types.test.js  message_routing.test.js  message_routing_integration.node.test.js  mockMCPService.test.js  python_bridge.test.js  server.api.test.js  server.test.js  websocket.node.test.js  websocket_server.node.test.js
python/: README.md  copy_agent_sops_hook.py  pyproject.toml
python/strands_agents_sops/: __init__.py  __main__.py  cursor.py  mcp.py  rules.py  skills.py  sources.py  utils.py
python/strands_agents_sops/mcp/: __init__.py  prompts.py  server.py  tools.py
python/strands_agents_sops/sops/: codebase-summary.sop.md
python/tests/: test_cursor.py  test_external_sop_loading.py  test_main.py  test_mcp_tools.py  test_rules.py  test_skills_external_sops.py  test_sources.py  test_utils.py
rules/: agent-sop-format.md
skills/agent-sop-authoring/: SKILL.md  agent-sop-format.md
skills/code-assist/: SKILL.md
skills/code-task-generator/: SKILL.md
skills/codebase-summary/: SKILL.md
skills/pdd/: SKILL.md
skills/pdd-code-task-generator/: SKILL.md
spec/: agent-sops-specification.md
