[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "strands-agents-sops"
version = "1.0.0"
description = "Agent SOPs as importable strings with an MCP server"
dependencies = [
    "mcp>=1.20.0",
]

[project.scripts]
strands-agents-sops = "strands_agents_sops.__main__:main"

[tool.hatch.build.targets.wheel]
include = [
    "strands_agents_sops/__init__.py",
    "strands_agents_sops/__main__.py",
    "strands_agents_sops/mcp.py",
    "strands_agents_sops/skills.py",
    "strands_agents_sops/rules.py",
    "strands_agents_sops/sops/*.md",
    "strands_agents_sops/rules/*.md"
]

[tool.hatch.build.hooks.custom]
path = "copy_agent_sops_hook.py"
